--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -14,7 +14,7 @@
 
 </head>
 <body>
-	<img src="@Path['~/Content/nancy-logo.png']" alt="Nancy logo" /><br />
+	<img src="/assets/nancy-logo.png" alt="Nancy logo" /><br />
 	This view was rendered using the SuperSimpleViewEngine
 </body>
 </html>
