--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -6,9 +6,9 @@
     <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
     <meta name="author" content="GeeksLabs">
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-    <link rel="shortcut icon" href="img/favicon.png">
+     <script src="../Assets/js/plugins/jquery/jquery-3.1.0.min.js" type="text/javascript"></script>
+      <script src="../Script/login.js" type="text/javascript"></script>
 
- 
 </head>
 
   <body class="login-img3-body">
