--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -3,27 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
-    <meta name="author" content="GeeksLabs">
-    <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
-     <script src="../Assets/js/plugins/jquery/jquery-3.1.0.min.js" type="text/javascript"></script>
-      <script src="../Script/login.js" type="text/javascript"></script>
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <meta name="keyword" content="">
+    <link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
+    <link href="../assets/css/module/login.css" rel="stylesheet" />
 
 </head>
 
   <body class="login-img3-body">
-
-    <div class="container">
-
+    <div class="container login-container">
       <form class="login-form" action="index.html">        
         <div class="login-wrap">
             <p class="login-img"><i class="icon_lock_alt"></i></p>
             <div class="input-group">
-              <span class="input-group-addon"><i class="icon_profile"></i></span>
+              <span class="input-group-addon"><i class="fa fa-user"></i></span>
               <input id="user" type="text" class="form-control" placeholder="Username" autofocus>
             </div>
             <div class="input-group">
-                <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+                <span class="input-group-addon"><i class="fa fa-key"></i></span>
                 <input id="password" type="password" class="form-control" placeholder="Password">
             </div>
             <label class="checkbox">
@@ -34,9 +33,9 @@
             <button class="btn btn-info btn-lg btn-block" type="submit">Signup</button>
         </div>
       </form>
-
     </div>
 
-
+    <script src="../Assets/js/plugin/jquery/jquery-3.1.0.min.js" type="text/javascript"></script>
+    <script src="../ScriptCom/login.js" type="text/javascript"></script>
   </body>
 </html>
