--- a/AsiHack.Base/Views/Homepage.html
+++ b/AsiHack.Base/Views/Homepage.html
@@ -6,16 +6,12 @@
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
 		<title>Professional Design</title>
-		<link href="../assets/css/plugins/bootstrap/bootstrap.min.css" rel="stylesheet" />
-		<link href="../assets/css/components/nav.css" rel="stylesheet" />
-		<link href="../assets/css/components/button.css" rel="stylesheet" />
+		<link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" />
+		<link href="../assets/css/component/nav.css" rel="stylesheet" />
 		<link href="../assets/css/base/layout.css" rel="stylesheet" />
 		<link href="../assets/css/base/typography.css" rel="stylesheet" />
-		<link href="../assets/css/plugins/bootstrap/simple-sidebar.css" rel="stylesheet" />
-		<link href="../assets/css/components/metroBox.css" rel="stylesheet" />
-		<link href="../assets/css/font-awesome.min.css" rel="stylesheet" />
-
-		<link href="assets/css/style.css" rel="stylesheet" />
+		<link href="../assets/css/plugin/bootstrap/simple-sidebar.css" rel="stylesheet" />
+		<link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
 	</head>
 	<body>
 		
@@ -26,7 +22,7 @@
 				<div id="overlay"></div>
 			</div>
 		</div>
-
+<!--
 			<div id="carousel" class="slider-con">
 				<img class="carousel-img" src="../assets/img/slider/06-edited.jpg" />
 				<img class="carousel-img" src="../assets/img/slider/1.jpg" />			
@@ -40,10 +36,8 @@
 				</div>
 			</div>
 
-		<!-- Portfolio Section
-    ==========================================-->
     <div id="tf-works">
-        <div class="container"> <!-- Container -->
+        <div class="container">
            
             <div class="categories">
                 
@@ -131,16 +125,16 @@
 
             </div>
         </div>
-    </div>
+    </div> 
+    -->
+
+   
+  
 
 		<script type="text/javascript" src="../assets/js/base/htmlLoader.js"></script>
-		<script type="text/javascript" src="../assets/js/plugins/jquery/jquery-3.1.0.min.js"></script>
+		<script type="text/javascript" src="../assets/js/plugin/jquery/jquery-3.1.0.min.js"></script>
 		<script type="text/javascript" src="../assets/js/base/script.js"></script>		
-		<script type="text/javascript" src="../assets/js/plugins/bootstrap/bootstrap.min.js"></script>		
-	    <script type="text/javascript" src="../assets/js/plugins/jquery/Chart.bundle.min.js"></script>
-	    <script type="text/javascript" src="../assets/js/jquery.isotope.js"></script>
-	    <script type="text/javascript" src="../assets/js/main.js"></script>
-	    <script type="text/javascript" src="../assets/js/owl.carousel.js"></script>	    
+		<script type="text/javascript" src="../assets/js/plugin/bootstrap/bootstrap.min.js"></script>
 
 	</body>
 </html>
