--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -16,6 +16,7 @@
     <div class="container login-container">
       <form class="login-form" action="index.html">        
         <div class="login-wrap">
+        	<p id="lblError"></p>
             <p class="login-img"><i class="icon_lock_alt"></i></p>
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -36,6 +37,6 @@
     </div>
 
     <script src="../Assets/js/plugin/jquery/jquery-3.1.0.min.js" type="text/javascript"></script>
-    <script src="../ScriptCom/login.js" type="text/javascript"></script>
+    <script src="../Script/login.js" type="text/javascript"></script>
   </body>
 </html>
