--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keyword" content="">
+    <title>Nihongo Flash</title>
     <link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
     <link href="../assets/css/module/login.css" rel="stylesheet" />
@@ -14,9 +15,12 @@
 
   <body class="login-img3-body">
     <div class="container login-container">
+    <div class="login-header">
+    <i class="fa fa-lock"></i>
+    </div>
       <form class="login-form" action="index.html">        
         <div class="login-wrap">
-        	<p id="lblError"></p>
+        	<p id="lblError" class="lblError"></p>
             <p class="login-img"><i class="icon_lock_alt"></i></p>
             <div class="input-group">
               <span class="input-group-addon"><i class="fa fa-user"></i></span>
@@ -26,12 +30,7 @@
                 <span class="input-group-addon"><i class="fa fa-key"></i></span>
                 <input id="password" type="password" class="form-control" placeholder="Password">
             </div>
-            <label class="checkbox">
-                <input type="checkbox" value="remember-me"> Remember me
-                <span class="pull-right"> <a href="#"> Forgot Password?</a></span>
-            </label>
-            <button class="btn btn-primary btn-lg btn-block" type="button" id="btnSubmit">Login</button>
-            <button class="btn btn-info btn-lg btn-block" type="button">Signup</button>
+            <button class=" btn-lg btn-block btn-sm" type="button" id="btnSubmit">Login</button>
         </div>
       </form>
     </div>
