--- a/AsiHack.Base/Views/topNav.html
+++ b/AsiHack.Base/Views/topNav.html
@@ -39,12 +39,12 @@
 						</li>
 						<li>
 							<a href="#">
-								<small>CONTACTS</small>
+								<small>MONITORING</small>
 							</a>
 						</li>
 						<li>
 							<a href="#">
-								<small>ABOUT</small>
+								<small>HELP</small>
 							</a>
 						</li>
 						<li class="dropdown">
@@ -56,13 +56,10 @@
 								User
 							</a>
 							<ul class="dropdown-menu">
-								<li><a href="#">Dropdown Link</a></li>
-								<li><a href="#">Dropdown Link</a></li>
-								<li><a href="#">Dropdown Link</a></li>
+								<li><a href="#">Account</a></li>
+								<li><a href="#">Logout</a></li>
 								<li class="divider" role="separator"></li>
-								<li><a href="#">Dropdown Link</a></li>
-								<li class="divider" role="separator"></li>
-								<li><a href="#">Dropdown Link</a></li>
+								<li><a href="#">Settings</a></li>
 							</ul>
 						</li>
 					</ul>
