--- a/AsiHack.Base/Assets/css/component/nav.css
+++ b/AsiHack.Base/Assets/css/component/nav.css
@@ -12,14 +12,25 @@
 	height:55px !important;
 }
 
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover {
-    color: #fff;
-    background-color: teal;
-}
 
 .navbar-default .navbar-nav>.active>a, 
 .navbar-default .navbar-nav>.active>a:focus, 
 .navbar-default .navbar-nav>.active>a:hover{
 	background-color: transparent;
-	border-bottom:3px solid #840a0a;
+	border-bottom:3px solid #8c988f;
+	color: #c7c7c7 !important;
+}
+
+.navbar-default{
+	background-image:url("../../img/background/1.jpg");
+	background-size:cover;
+}
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
+	background-color: transparent !important;
+}
+.navbar-right li > a{
+	transition:0.5s;
+}
+.navbar-right li > a:hover{
+	color:teal !important;
 }
