--- a/AsiHack.Base/Views/Homepage.html
+++ b/AsiHack.Base/Views/Homepage.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-		<title>Professional Design</title>
+		<title>Nihongo Flash</title>
 		<link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" />
 		<link href="../assets/css/component/nav.css" rel="stylesheet" />
 		<link href="../assets/css/base/layout.css" rel="stylesheet" />
