--- a/AsiHack.Base/Views/Homepage.html
+++ b/AsiHack.Base/Views/Homepage.html
@@ -12,6 +12,7 @@
 		<link href="../assets/css/base/typography.css" rel="stylesheet" />
 		<link href="../assets/css/plugin/bootstrap/simple-sidebar.css" rel="stylesheet" />
 		<link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
+        <link href="../assets/css/plugin/bootstrap/simple-sidebar.css" rel="stylesheet" />
 	</head>
 	<body>
 		
