--- a/AsiHack.Base/Views/Homepage.html
+++ b/AsiHack.Base/Views/Homepage.html
@@ -12,7 +12,6 @@
 		<link href="../assets/css/base/typography.css" rel="stylesheet" />
 		<link href="../assets/css/plugin/bootstrap/simple-sidebar.css" rel="stylesheet" />
 		<link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
-        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/js/plugin/Guriddo_jqGrid_JS_5.1.1/css/ui.jqgrid.css" />
         
 
 	</head>
@@ -21,123 +20,16 @@
 		<div id="topNav"></div>
 		<div id="wrapper">
 			<div id="sideNav"></div>
-			<div id="page-content-wrapper">
-				<div id="overlay"></div>
-               
-			</div>
+			<div id="page-content-wrapper">	
+                <div class="container">
+                    <table id="tblData" class="table data-table"></table>
+                     <div id="prowed1"></div>
+                    <input type="hidden" id="lastCellId" name="Language" value="-1">
+                </div>
+        	</div>
 		</div>
-          <table id="tblData"></table>
-                 <div id="prowed1"></div>
-         <button class="" type="button" id="btnAdd">Add</button>
-        <input type="hidden" id="lastCellId" name="Language" value="-1">
-<!--
-			<div id="carousel" class="slider-con">
-				<img class="carousel-img" src="../assets/img/slider/06-edited.jpg" />
-				<img class="carousel-img" src="../assets/img/slider/1.jpg" />			
-			</div>
-			<div class="container">
-				<div class="col-lg-4">
-					<div class="main paper"></div>
-				</div>
-				<div class="col-lg-8">
-					<div class="main paper"></div>
-				</div>
-			</div>
-
-    <div id="tf-works">
-        <div class="container">
+         </div>
            
-            <div class="categories">
-                
-                <ul class="cat">
-                    <li class="pull-left"><h4>Filter by Type:</h4></li>
-                    <li class="pull-right">
-                        <ol class="type">
-                            <li><a href="#" data-filter="*" class="active">Latest</a></li>
-                            <li><a href="#" data-filter=".web"><</a></li>
-                            <li><a href="#" data-filter=".photography">></a></li>
-                            <li><a href="#" data-filter=".app" >Most talk about</a></li>
-                            <li><a href="#" data-filter=".branding" >All</a></li>
-                        </ol>
-                    </li>
-                </ul>
-                <div class="clearfix"></div>
-            </div>
-
-            <div id="lightbox" class="row">
-
-                <div class="col-sm-6 col-md-3 col-lg-3 branding">
-                    <div class="portfolio-item">
-                        <div class="hover-bg">
-                            <a href="#">
-                                <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
-                                    <div class="clearfix"></div>
-                                    <i class="fa fa-plus"></i>
-                                </div>
-                                <img src="../assets/img/tables/1.jpg" class="img-responsive" alt="...">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-3 col-lg-3 photography app">
-                    <div class="portfolio-item">
-                        <div class="hover-bg">
-                            <a href="#">
-                                <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
-                                    <div class="clearfix"></div>
-                                    <i class="fa fa-plus"></i>
-                                </div>
-                                <img src="../assets/img/tables/2.jpg" class="img-responsive" alt="...">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-3 col-lg-3 branding">
-                    <div class="portfolio-item">
-                        <div class="hover-bg">
-                            <a href="#">
-                                <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
-                                    <div class="clearfix"></div>
-                                    <i class="fa fa-plus"></i>
-                                </div>
-                                <img src="../assets/img/tables/3.jpg" class="img-responsive" alt="...">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-3 col-lg-3 branding">
-                    <div class="portfolio-item">
-                        <div class="hover-bg">
-                            <a href="#">
-                                <div class="hover-text">
-                                    <h4>Logo Design</h4>
-                                    <small>Branding</small>
-                                    <div class="clearfix"></div>
-                                    <i class="fa fa-plus"></i>
-                                </div>
-                                <img src="../assets/img/tables/4.jpg" class="img-responsive" alt="...">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-        </div>
-    </div> 
-    -->
-
-   
-  
 
 		<script type="text/javascript" src="../assets/js/base/htmlLoader.js"></script>
 		<script type="text/javascript" src="../assets/js/plugin/jquery/jquery-3.1.0.min.js"></script>
