--- a/AsiHack.Base/Views/sideNav.html
+++ b/AsiHack.Base/Views/sideNav.html
@@ -1,21 +1,13 @@
 <div id="sidebar-wrapper">
 	<ul class="sidebar-nav">
-	    <li class="sidebar-brand">
-	        <a href="#">
-	            Alarm
+	    <li >
+	        <a href="#" id="btnAdd">
+	            Add
 	        </a>
 	    </li>
 	    <li>
-	        <a href="#">Confirm</a>
+	        <a href="#">Remove</a>
 	    </li>
-	    <li>
-	        <a href="#">Snooze</a>
-	    </li>
-	    <li>
-	        <a href="#">Reschedule</a>
-	    </li>
-	    <li>
-	        <a href="#">Description</a>
-	    </li>
+	    
 	</ul>		    
 </div>
