--- a/AsiHack.Base/Assets/css/module/login.css
+++ b/AsiHack.Base/Assets/css/module/login.css
@@ -5,7 +5,7 @@ body{
 
 .login-container{
 	margin-top:50px;
-	width:400px;
+	width:400px !important;
 	padding:5px 40px 20px 40px;
 	background-color:rgba(0,0,0,0.2);
 }
