--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-  <body class="login-img3-body">
+  <body >
     <div class="container login-container">
     <div class="login-header">
     <i class="fa fa-lock"></i>
@@ -33,8 +33,7 @@
             <button class=" btn-lg btn-block btn-sm" type="button" id="btnSubmit">Login</button>
         </div>
       </form>
-    </div>
-
+     </div>
     <script src="../Assets/js/plugin/jquery/jquery-3.1.0.min.js" type="text/javascript"></script>
     <script src="../Script/login.js" type="text/javascript"></script>
   </body>
