--- a/AsiHack.Base/Views/sideNav.html
+++ b/AsiHack.Base/Views/sideNav.html
@@ -2,11 +2,13 @@
 	<ul class="sidebar-nav">
 	    <li >
 	        <a href="#" id="btnAdd">
-	            Add
+	            <span class="add"><i class="fa fa-plus"></i></span>Add
 	        </a>
 	    </li>
 	    <li>
-	        <a href="#">Remove</a>
+	    	<a href="#">
+	         	<span class="add"><i class="fa fa-minus"></i></span>Remove
+	         </a>
 	    </li>
 	    
 	</ul>		    
