--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="keyword" content="">
-    <title>Nihongo Flash</title>
+    <title>Nihongo Flash Card</title>
     <link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
     <link href="../assets/css/module/login.css" rel="stylesheet" />
