--- a/AsiHack.Base/Views/topNav.html
+++ b/AsiHack.Base/Views/topNav.html
@@ -1,4 +1,4 @@
-<div class="navbar navbar-default">
+<div class="navbar navbar-default navbar-fixed-top">
 			<div class="container-fluid">
 				<div class="navbar-header">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mainMenu" aria-expanded="false">
@@ -15,7 +15,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="">
-					<img class="logo" src="assets/img/logo/logo.png" />
+					NFC
 				</a>
 				</div>
 
