--- a/AsiHack.Base/Views/index.html
+++ b/AsiHack.Base/Views/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <meta name="keyword" content="">
     <title>Nihongo Flash Card</title>
-    <link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" />
+    <link href="../assets/css/plugin/bootstrap/bootstrap.min.css" rel="stylesheet" /> cc119eda
     <link href="../assets/css/plugin/font-awesome/font-awesome.min.css" rel="stylesheet" />
     <link href="../assets/css/module/login.css" rel="stylesheet" />
 
