--- a/AsiHack.Base/Assets/css/component/nav.css
+++ b/AsiHack.Base/Assets/css/component/nav.css
@@ -1,7 +1,7 @@
 .navbar-brand .logo{
-	margin-top:-15px;
-	height: 50px;
-	width: 50px;
+	 margin-top: -9px;
+    height: 40px;
+    margin-left: 19px;
 }
 
 .navbar{
