--- a/AsiHack.Base/Views/topNav.html
+++ b/AsiHack.Base/Views/topNav.html
@@ -15,7 +15,7 @@
 					<span class="icon-bar"></span>
 				</button>
 				<a class="navbar-brand" href="">
-					NFC
+					<img class="logo"src="../Assets/img/logo/1.png"  />
 				</a>
 				</div>
 
